implement auth, school get/create route
