# src/controllers/index.ts
@@ -1,7 +1,9 @@
 import SchoolController from './school';
+import { SuperAdmin } from './superAdmin';
 
 class Controllers {
   static School = SchoolController;
+  static SuperAdmin = SuperAdmin;
 }
 
 export default Controllers;
