# src/controllers/superAdmin/index.ts
@@ -1,0 +1,5 @@
+import { superAdminLoginController } from "./controllers/login";
+
+export class SuperAdmin {
+    static login = superAdminLoginController
+}
